Performance improvements and general tidy ups:
  - Only calculate the total number of headings for each browse type once (when
    the database is opened)

  - Only open the bib index once and share that instance across all browses.
    This saves a fairly large amount of memory.

  - Make diacritic cleaning optional.

  - Added a new "reopen" query type that forces all browse sources to open
    themselves.  It's a good idea to run this after updating the bib index to
    allow Lucene to close file handles for deleted files.

--- a/README
+++ b/README
@@ -124,6 +124,8 @@
        <lst name="subjects">
 	 <str name="DBpath">/path/to/your/subjectsbrowse.db</str>
 	 <str name="field">subject-browse</str>
+         <str name="ignoreDiacritics">yes</str>
+         <str name="dropChars">[]()',</str>
        </lst>
     </requestHandler>
 
