--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Original author: Mark Triggs <mtriggs@nla.gov.au>.  Please feel free
+Original author: Mark Triggs <mark@dishevelled.net>.  Please feel free
 to get in touch if you have any queries.
