--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
 Original author: Mark Triggs <mark@dishevelled.net>.  Please feel free
 to get in touch if you have any queries.
+
+Changes to support consortia (browsing an institution's subset) added
+by Alan Rykhus <alan.rykhus@mnsu.edu>
