Update README to point to new authoritative version.

--- a/README
+++ b/README
@@ -1,4 +1,18 @@
 
+=======================================================================
+ Moved!
+=======================================================================
+
+ This repository has moved to a new home under the VuFind project.
+ Find the new repository here:
+
+   https://github.com/demiankatz/vufind-browse-handler
+
+=======================================================================
+
+
+
+
        Care and feeding of the NLA Solr browse request handler
 
 			     Mark Triggs
